# kuru

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  package-lock.json  requirements.txt
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  supabase.py
backend/migrations/: 001_create_feedback_table.sql  002_add_slug_year_vibe.sql
backend/mlartifacts/: MLmodel  pipeline_config.json
backend/models/: schemas.py
pipeline/: README.md  mlflow.db  pyproject.toml  requirements.txt
pipeline/data/: b6_case1.json  b6_case2.json  b6_case3.json  eval_results.csv  eval_results_exp1.csv  eval_results_exp3.csv  eval_results_v2.csv  eval_results_v3.csv  eval_results_v4_after_cleanup.csv  eval_results_v5_after_remap_retrieval_fix.csv  eval_results_v6_current_chunks.csv  eval_results_v7_filtered_rerank.csv  eval_results_v8_structured.csv  eval_set.csv  eval_set_v3_after_cleanup.csv  eval_set_v6_current_chunks.csv  eval_set_v7_filtered_current_chunks.csv  eval_set_v8_structured.csv  program_name_mapping.csv
pipeline/db/: schema.sql
pipeline/docs/: 01219462_Final_Project_Manuscript_v01.extracted.txt  01219462_KUru_FinalReport_v2.txt  B4_MLflow_Run_and_Screenshots.md  C2_interface_contract.md  C3_interface_testing.md  DEMO_RECORDING_GUIDE.md  FINAL_REPORT_V2_FIX_CHECKLIST.md  HANDOFF_B5.md  HANDOFF_INGESTION_CLEANUP_2026-05-13.md  KUru_MVP_Evaluation_Plan (1).docx  KUru_MVP_Evaluation_Plan.extracted.txt  MEETING_PREP.md  POC_GRADER_GUIDE.md  Part_A_report.md  Part_B_alignment.md  SETUP.md  SRS_MVP_POC_COMPARISON.md  STATUS.md  current-ingestion-state.md  eval_results.md  explorer-data-guide.md  ingest-status.md  ingestion-guide.md  poc_submission_plan.md  scraper-issue-scanned-pdfs.md  scraper.md
pipeline/notebooks/: B1_data_exploration.ipynb  B2_model_training.ipynb  B5_explainability.ipynb  B6_prediction_reasoning.ipynb  B7_model_deployment.ipynb  mlflow.db
pipeline/scripts/: _env.py  assign_slugs.py  audit_chunks.py  augment_eval_set_structured.py  backfill_program_fees.py  backfill_program_metadata.py  backfill_program_names_from_chunks.py  backfill_structured_from_chunks.py  check_ee_chunks.py  check_ee_natl.py  check_programs.py  cleanup_program_duplicates.py  clear_chunks.py  copy_batch.py  generate_eval_set.py  ingestion_monitor.py  link_tcas.py  log_eval_results_to_mlflow.py  migrate_mlflow_to_sqlite.py  (+7 more)
(+250 files in other folders)
