[project]
name = "kuru-backend"
version = "0.1.0"
description = "KUru — AI PLO-to-career navigator for Kasetsart University"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.0",
    "kuru-pipeline",
]

[tool.uv.sources]
kuru-pipeline = { path = "../../kuru-pipeline", editable = true }

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
