[project]
name = "kuru-pipeline"
version = "0.1.0"
description = "KUru data ingestion pipeline — PDF extraction, embedding, RAG, and Neo4j population"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "supabase>=2.5.0",
    "neo4j>=5.19.0",
    "pythainlp>=5.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "gdown>=5.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "pydantic>=2.7.0",
    "google-genai>=1.70.0",
    "psycopg2-binary>=2.9.11",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "pytesseract>=0.3.10",
    "nbformat>=5.10.4",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "pandas>=2.2.0,<3",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "mlflow>=2.14.0",
]

[project.scripts]
kuru-download   = "kuru.scripts.download_data:main"
kuru-setup-db   = "kuru.scripts.setup_db:main"
kuru-ingest-mko = "kuru.scripts.ingest_curriculum:main"
kuru-ingest-tcas = "kuru.scripts.ingest_tcas:main"
kuru-demo       = "kuru.scripts.demo_rag:main"
kuru-scrape-curriculum = "kuru.scripts.scrape_curriculum:main"
kuru-coverage          = "kuru.scripts.coverage_report:main"
kuru-cost              = "kuru.scripts.check_openrouter_cost:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuru"]
